# doc/openapi.json
@@ -123,6 +123,9 @@
 			"Room": {
 				"description": "Room schema",
 				"properties": {
+					"hidden": {
+						"type": "boolean"
+					},
 					"message_count": {
 						"type": "integer"
 					},
@@ -158,6 +161,30 @@
 				"required": [
 					"content",
 					"user"
+				],
+				"type": "object"
+			},
+			"UpdateRoomVisibilityRequest": {
+				"description": "UpdateRoomVisibilityRequest schema",
+				"properties": {
+					"hidden": {
+						"type": "boolean"
+					},
+					"pubkey": {
+						"type": "string"
+					},
+					"signature": {
+						"type": "string"
+					},
+					"timestamp": {
+						"format": "int64",
+						"type": "integer"
+					}
+				},
+				"required": [
+					"pubkey",
+					"signature",
+					"timestamp"
 				],
 				"type": "object"
 			},
@@ -506,7 +533,7 @@
 		},
 		"/api/rooms/{room}/messages": {
 			"get": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetMessages.func3`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetMessages.func4`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
 				"operationId": "GET_/api/rooms/:room/messages",
 				"parameters": [
 					{
@@ -581,7 +608,7 @@
 						"description": ""
 					}
 				},
-				"summary": "func3",
+				"summary": "func4",
 				"tags": [
 					"api",
 					"rooms",
@@ -589,7 +616,7 @@
 				]
 			},
 			"post": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.SendMessage.func4`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.SendMessage.func5`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
 				"operationId": "POST_/api/rooms/:room/messages",
 				"parameters": [
 					{
@@ -669,7 +696,97 @@
 						"description": ""
 					}
 				},
-				"summary": "func4",
+				"summary": "func5",
+				"tags": [
+					"api",
+					"rooms",
+					"chat"
+				]
+			}
+		},
+		"/api/rooms/{room}/visibility": {
+			"patch": {
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.UpdateRoomVisibility.func3`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"operationId": "PATCH_/api/rooms/:room/visibility",
+				"parameters": [
+					{
+						"in": "header",
+						"name": "Accept",
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "room",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"content": {
+						"*/*": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateRoomVisibilityRequest"
+							}
+						}
+					},
+					"description": "Request body for models.UpdateRoomVisibilityRequest",
+					"required": true
+				},
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/string"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"$ref": "#/components/schemas/string"
+								}
+							}
+						},
+						"description": "OK"
+					},
+					"400": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							}
+						},
+						"description": "Bad Request _(validation or deserialization error)_"
+					},
+					"500": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							}
+						},
+						"description": "Internal Server Error _(panics)_"
+					},
+					"default": {
+						"description": ""
+					}
+				},
+				"summary": "func3",
 				"tags": [
 					"api",
 					"rooms",
@@ -679,7 +796,7 @@
 		},
 		"/api/users": {
 			"get": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetAllUsers.func6`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetAllUsers.func7`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
 				"operationId": "GET_/api/users",
 				"parameters": [
 					{
@@ -746,14 +863,14 @@
 						"description": ""
 					}
 				},
-				"summary": "func6",
+				"summary": "func7",
 				"tags": [
 					"api",
 					"users"
 				]
 			},
 			"post": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.RegisterUser.func5`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.RegisterUser.func6`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
 				"operationId": "POST_/api/users",
 				"parameters": [
 					{
@@ -825,7 +942,7 @@
 						"description": ""
 					}
 				},
-				"summary": "func5",
+				"summary": "func6",
 				"tags": [
 					"api",
 					"users"
@@ -834,8 +951,89 @@
 		},
 		"/api/users/unverify": {
 			"post": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.UnverifyUser.func10`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.UnverifyUser.func11`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
 				"operationId": "POST_/api/users/unverify",
+				"parameters": [
+					{
+						"in": "header",
+						"name": "Accept",
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"content": {
+						"*/*": {
+							"schema": {
+								"$ref": "#/components/schemas/VerifyUserRequest"
+							}
+						}
+					},
+					"description": "Request body for models.VerifyUserRequest",
+					"required": true
+				},
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/string"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"$ref": "#/components/schemas/string"
+								}
+							}
+						},
+						"description": "OK"
+					},
+					"400": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							}
+						},
+						"description": "Bad Request _(validation or deserialization error)_"
+					},
+					"500": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							}
+						},
+						"description": "Internal Server Error _(panics)_"
+					},
+					"default": {
+						"description": ""
+					}
+				},
+				"summary": "func11",
+				"tags": [
+					"api",
+					"users"
+				]
+			}
+		},
+		"/api/users/verify": {
+			"post": {
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.VerifyUser.func10`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"operationId": "POST_/api/users/verify",
 				"parameters": [
 					{
 						"in": "header",
@@ -913,90 +1111,9 @@
 				]
 			}
 		},
-		"/api/users/verify": {
-			"post": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.VerifyUser.func9`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
-				"operationId": "POST_/api/users/verify",
-				"parameters": [
-					{
-						"in": "header",
-						"name": "Accept",
-						"schema": {
-							"type": "string"
-						}
-					}
-				],
-				"requestBody": {
-					"content": {
-						"*/*": {
-							"schema": {
-								"$ref": "#/components/schemas/VerifyUserRequest"
-							}
-						}
-					},
-					"description": "Request body for models.VerifyUserRequest",
-					"required": true
-				},
-				"responses": {
-					"200": {
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/string"
-								}
-							},
-							"application/xml": {
-								"schema": {
-									"$ref": "#/components/schemas/string"
-								}
-							}
-						},
-						"description": "OK"
-					},
-					"400": {
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/HTTPError"
-								}
-							},
-							"application/xml": {
-								"schema": {
-									"$ref": "#/components/schemas/HTTPError"
-								}
-							}
-						},
-						"description": "Bad Request _(validation or deserialization error)_"
-					},
-					"500": {
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/HTTPError"
-								}
-							},
-							"application/xml": {
-								"schema": {
-									"$ref": "#/components/schemas/HTTPError"
-								}
-							}
-						},
-						"description": "Internal Server Error _(panics)_"
-					},
-					"default": {
-						"description": ""
-					}
-				},
-				"summary": "func9",
-				"tags": [
-					"api",
-					"users"
-				]
-			}
-		},
 		"/api/users/{publicKey}": {
 			"get": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetUser.func7`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetUser.func8`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
 				"operationId": "GET_/api/users/:publicKey",
 				"parameters": [
 					{
@@ -1065,7 +1182,7 @@
 						"description": ""
 					}
 				},
-				"summary": "func7",
+				"summary": "func8",
 				"tags": [
 					"api",
 					"users"
@@ -1074,7 +1191,7 @@
 		},
 		"/api/users/{publicKey}/details": {
 			"get": {
-				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetUserDetails.func8`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
+				"description": "#### Controller: \n\n`github.com/EwenQuim/microchat/internal/handlers.RegisterChatRoutes.GetUserDetails.func9`\n\n#### Middlewares:\n\n- `github.com/go-fuego/fuego.defaultLogger.middleware`\n\n---\n\n",
 				"operationId": "GET_/api/users/:publicKey/details",
 				"parameters": [
 					{
@@ -1143,7 +1260,7 @@
 						"description": ""
 					}
 				},
-				"summary": "func8",
+				"summary": "func9",
 				"tags": [
 					"api",
 					"users"
